# tilebound

./: .gitignore  Cargo.toml  README.md  default_inventory.json  default_player_data.json  default_world.json  player_data.json  rustfmt.toml  world.json
assets/: chest.glb  tile.glb  viking_axe.glb
src/: animengine.rs  astar.rs  character_creation.rs  chest.rs  combat.rs  hexagonal_astar.py  inventory.rs  lib.rs  load.rs  main.rs  map_load.rs  tempui.rs  world.json
src/load/: mod.rs  visibleload.rs
tools/: Cargo.toml
tools/src/: data.json
tools/world_gen/src/: data.json  main.rs
