[package]
name = "tilebound"
version = "0.1.0"
edition = "2021"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.10.0", features = ["dynamic_linking", "jpeg"] }
bevy_mod_fbx = "0.4.0"
bevy_editor_pls = "0.4.0"
bevy-inspector-egui = "0.18.0"
bevy-scene-hook = "6"
bevy_mod_picking = "0.13.0"
