[package]
name = "tilebound"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "world_gen"
path = "tools/world_gen/src/main.rs"


# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.10.0", features = ["dynamic_linking", "jpeg"] }
bevy_mod_fbx = "0.4.0"
bevy_editor_pls = "0.4.0"
bevy-inspector-egui = "0.18.0"
bevy-scene-hook = "6"
bevy_mod_picking = "0.13.0"

rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0.0"
nanoid = "0.4.0"

# Personal fork of https://github.com/Plonq/bevy_panorbit_camera
bevy_panorbit_camera = { git = "https://github.com/amiyuki7/bevy_panorbit_camera.git", branch = "0.5.2" }
